cluster-apps/cloud/itscontained/charts/externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: itscontained-github-io
spec:
  type: ExternalName
  externalName: itscontained.github.io
  ports:
    - port: 443
