cluster-apps/cloud/itscontained/charts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.priority: "10"
    cert-manager.io/cluster-issuer: le-production
  name: charts-itscontained-io
spec:
  rules:
    - host: charts.itscontained.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: itscontained-github-io
                port:
                  number: 443
  tls:
    - hosts: [charts.itscontained.io]
      secretName: charts-itscontained-io
